hphp/test/slow/parser/initializer-static-3.php.expectf

Fatal error: A left parenthesis ('(') is expected here. in %s/initializer-static-3.php on line 4
